--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
 body{
-   background-color: pink
+   background-color: purple;
+   text-align: center
 }
 
 h1{
-   color: black; 
-   text-align: center；
+   color: gold; 
+   font-family:dancing-script;
+   font-size:48px
+}
+
+h2{
+   font-family:Architects-daughter;
+   color:black;
+   font-size:28px
+}
+
+h3{
+   font-family:Pacifico;
+   font-size:28px;
+   color:black
 }
 
 p{
    font-family: Georgia;
-   font-size: 20px
-   font-color: purple
+   font-size: 20px;
+   color: black
 }
