--- a/style.css
+++ b/style.css
@@ -6,19 +6,22 @@ body{
 h1{
    color: gold; 
    font-family:dancing-script;
-   font-size:48px
+   font-size:48px;
+   text-align:center
 }
 
 h2{
    font-family:Architects-daughter;
    color:black;
-   font-size:28px
+   font-size:28px;
+      text-align:center
 }
 
 h3{
    font-family:Pacifico;
    font-size:28px;
-   color:black
+   color:black;
+   text-align:center
 }
 
 p{
