--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
 
 h2{
    font-family:Architects-daughter;
-   color:black;
+   color:gold;
    font-size:28px;
       text-align:center
 }
@@ -20,12 +20,13 @@ h2{
 h3{
    font-family:Pacifico;
    font-size:28px;
-   color:black;
+   color:gold;
    text-align:center
 }
 
 p{
    font-family: Georgia;
    font-size: 20px;
-   color: black
+   color: gold
+      
 }
