--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 h1{
-   color: gold; 
+   color: purple; 
    font-family:dancing-script;
    font-size:48px;
    text-align:center
@@ -12,7 +12,7 @@ h1{
 
 h2{
    font-family:Architects-daughter;
-   color:gold;
+   color:purple;
    font-size:28px;
       text-align:center
 }
@@ -20,13 +20,13 @@ h2{
 h3{
    font-family:Pacifico;
    font-size:28px;
-   color:gold;
+   color:purple;
    text-align:center
 }
 
 p{
    font-family: Georgia;
    font-size: 20px;
-   color: gold
+   color: purple
       
 }
